add some paragraph

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <DOCTYPE! html>
 <html>
 <body>
-<<<<<<< HEAD
 <p>
   first paragraph
   </p>
-  
+<p>
+This is another paragraph
+</p>
 </body>
 </html>
 
